{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 38,
  "lineage": "cce895fe-a425-9796-69d2-957a20da198e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6615d1e95c98aca",
            "arn": "arn:aws:ec2:ap-south-1:231311298137:instance/i-0cce061591ac3c3cd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cce061591ac3c3cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myApp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea205d451732577d",
            "private_dns": "ip-10-0-2-21.ap-south-1.compute.internal",
            "private_ip": "10.0.2.21",
            "public_dns": "ec2-13-233-236-69.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.236.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048585b60b4c014fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b6b8765f7aba08e",
            "tags": {
              "Name": "myApp"
            },
            "tags_all": {
              "Name": "myApp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-034790861c648a193"
            ]
          },
          "dependencies": [
            "aws_key_pair.keystore",
            "aws_security_group.ssh_connection",
            "module.vpcModule.aws_subnet.myapp-public-subnet",
            "module.vpcModule.aws_vpc.myapp-vpc",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:231311298137:security-group/sg-034790861c648a193",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034790861c648a193",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myApp-sg",
            "name_prefix": "",
            "owner_id": "231311298137",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dd54aedcba88b38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcModule.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-gw",
      "provider": "module.vpcModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:231311298137:internet-gateway/igw-0326fa04975ba20ee",
            "id": "igw-0326fa04975ba20ee",
            "owner_id": "231311298137",
            "tags": {
              "Name": "myapp-vpc-gw"
            },
            "tags_all": {
              "Name": "myapp-vpc-gw"
            },
            "vpc_id": "vpc-02dd54aedcba88b38"
          },
          "dependencies": [
            "module.vpcModule.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myapp-public-subnet-rt",
      "provider": "module.vpcModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:231311298137:route-table/rtb-0de0c42410ba8f9ea",
            "id": "rtb-0de0c42410ba8f9ea",
            "owner_id": "231311298137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0326fa04975ba20ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-vpc-public-subnet-rt"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dd54aedcba88b38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcModule.aws_internet_gateway.myapp-gw",
            "module.vpcModule.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-public-subnet",
      "provider": "module.vpcModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0e47a46dbcfd4f4",
            "route_table_id": "rtb-0de0c42410ba8f9ea",
            "subnet_id": "subnet-07b6b8765f7aba08e"
          },
          "dependencies": [
            "module.vpcModule.aws_route_table.myapp-public-subnet-rt",
            "module.vpcModule.aws_subnet.myapp-public-subnet",
            "module.vpcModule.aws_vpc.myapp-vpc",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-private-subnet",
      "provider": "module.vpcModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:231311298137:subnet/subnet-0762b2f2ecc75f090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0762b2f2ecc75f090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "231311298137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-subnet"
            },
            "vpc_id": "vpc-02dd54aedcba88b38"
          },
          "dependencies": [
            "module.vpcModule.aws_vpc.myapp-vpc",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-public-subnet",
      "provider": "module.vpcModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:231311298137:subnet/subnet-07b6b8765f7aba08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b6b8765f7aba08e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231311298137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-subnet"
            },
            "vpc_id": "vpc-02dd54aedcba88b38"
          },
          "dependencies": [
            "module.vpcModule.aws_vpc.myapp-vpc",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "module.vpcModule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:231311298137:vpc/vpc-02dd54aedcba88b38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-024ea72a87eca9c14",
            "default_route_table_id": "rtb-063fe1aadc5cf2696",
            "default_security_group_id": "sg-0409c2c19de821464",
            "dhcp_options_id": "dopt-9c12a6f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02dd54aedcba88b38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063fe1aadc5cf2696",
            "owner_id": "231311298137",
            "tags": {
              "Name": "myapp-vpc"
            },
            "tags_all": {
              "Name": "myapp-vpc"
            }
          }
        }
      ]
    }
  ]
}